--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "angular2-moment": "^1.0.0-beta.4",
     "core-js": "^2.4.1",
     "ng2-datepicker": "^1.0.9",
     "rxjs": "5.0.0-beta.12",
